[package]
name = "guardrail"
version = "0.1.0"
edition = "2021"
description = "Deterministic WASM execution sandbox for autonomous AI code enforcement"

[dependencies]
# ── WASM Runtime ──────────────────────────────────────────────────────────────
# Wasmtime: Bytecode Alliance's production WASM runtime.
# Cranelift feature enables AOT compilation (default, but explicit for clarity).
wasmtime = { version = "43.0", features = ["cranelift"] }

# WASI Preview 1 host implementation — provides the `wasi_snapshot_preview1`
# imports that compiled Rust/C WASM modules expect (_start, fd_write, etc).
wasmtime-wasi = "43.0"

# ── Serialization ─────────────────────────────────────────────────────────────
# Structured JSON feedback loop output for the LLM swarm.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── Utilities ─────────────────────────────────────────────────────────────────
# Ergonomic error handling with context propagation.
anyhow = "1.0"

# Temporary directories for compilation artifacts (source → .wasm).
tempfile = "3"

# ── mHTTP: Host-Side Data Ingestion Engine ────────────────────────────────────
# Async HTTP client with TLS for fetching raw web payloads.
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Async runtime — required by reqwest. Only enable the features we need.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# DOM annihilator — strips HTML/CSS/JS bloat to pure text signal.
# Uses html5ever (Servo's parser) under the hood. CSS feature enables
# filtering of display:none and other hidden elements.
html2text = { version = "0.14", features = ["css"] }
